Dropdown related changes added.

--- a/TrainingProject/Views/Shared/_Layout.cshtml
+++ b/TrainingProject/Views/Shared/_Layout.cshtml
@@ -106,6 +106,15 @@
                                     <li><a href="/Admin/OnlineUsers"><i class="fa fa-user"></i>Online Users</a></li>
                                 }
 
+                                <li>
+                                    <a><i class="fa fa-tags"></i> UI Controls <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="/Dropdown/Index">Dropdown</a></li>
+                                        <li><a href="/Dropdown/Index">DateTime</a></li>
+                                    </ul>
+                                </li>
+
+
                                 <li><a href="/Test/Test"><i class="fa fa-user"></i>Test</a></li>
 
                                 @if (User.IsWithRight(SystemEnums.Rights.ManagePlantLevelMasterData))
